# otus-cpp-basic-05homework-

./: CMakeLists.txt  main.cpp
statistics/: CMakeLists.txt  IStatistics.h  Statistics.cpp  Statistics.h
